--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,19 +4,19 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/dhbw"
+        android:icon="@drawable/dhbw_small"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".BaseActivity">
+        <activity android:name=".BaseActivity" android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".QuestionActivity">
+        <activity android:name=".QuestionActivity" android:screenOrientation="portrait">
         </activity>
     </application>
 
