--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,8 @@
         </activity>
         <activity android:name=".QuestionActivity" android:screenOrientation="portrait">
         </activity>
+        <activity android:name=".StatsActivity" android:screenOrientation="portrait">
+        </activity>
     </application>
 
 </manifest>
