--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
         </activity>
         <activity android:name=".StatsActivity" android:screenOrientation="portrait">
         </activity>
+        <activity android:name=".SettingsActivity" android:screenOrientation="portrait">
+        </activity>
     </application>
 
 </manifest>
